# paper-rag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml  deploy.yml
db/migrations/: 0001_init.sql  0002_paragraph_keywords.sql  0003_keyword_result_cache.sql  0004_review_documents.sql  0005_drop_paper_tables_embedding.sql  0006_drop_papers_status.sql  0007_llm_calls.sql
docs/adr/: 0001-pgvector-single-store.md  0002-parsing-stack.md  0003-observability-approach.md
docs/design/: DESIGN.md  REQUIREMENTS-TRACE.md
docs/dev-log/: 2026-07-04.md  2026-07-20.md  2026-07-22.md  2026-07-23.md
docs/guide/: 01-environment.md  02-stack.md  03-database.md  04-ingest-pipeline.md  05-search-api.md  06-ui.md  07-e2e-verification.md  08-embedding.md  09-upload-review-colab-training.md  10-production-readiness.md  11-paper-collection.md  12-macbook-remote-development-handoff.md  13-codebase-reading-guide.md  14-evaluation-labeling.md  15-deployment.md  16-observability.md  README.md
docs/presentation/: EVALUATION_NOTES_AND_QA.md  PRESENTATION.md  README.md  SPEAKER_NOTES_AND_QA.md  video-script.md  발표대본.md  발표자료.pptx  영상발표대본.md  영상발표자료.pptx
docs/presentation/deliverables/: 01-research.md  02-requirements-spec.md  03-wbs.md  04-sequence-diagram.md  05-deployment-diagram.md  06-evaluation-metrics.md
docs/reports/assessments/: 2026-07-12-paper-collection-smoke.md  2026-07-12-production-readiness.md  2026-07-12-two-paper-ocr-evaluation.md  2026-07-20-oss-deployment-risk-model-tradeoff.md  2026-07-22-llm-search-capacity.md
docs/reports/benchmarks/: 2026-07-04-layout-backends.md  2026-07-04-llm-cpu.md
docs/reports/ingest/: 2026-07-04.md
notebooks/: paperrag_training_colab.ipynb
scripts/: apply_migrations.py  backfill_review_documents.py  demo_server.py  deploy.sh  download_paddle_models.py  evaluate_ocr_quality.py  export_ocr_evaluation.py  preflight.py  prepare_training_data.py  with_paddle_runtime.sh
src/paperrag/: auth.py  concurrency.py  config.py  db.py  logging_config.py  readiness.py
src/paperrag/collect/: __init__.py  __main__.py  cli.py  models.py  openalex.py  service.py  smoke.py
src/paperrag/embed/: __init__.py  encoder.py  server.py
src/paperrag/eval/: __init__.py  metrics.py
src/paperrag/ingest/: __init__.py  __main__.py  cli.py  embeddings.py  filterer.py  keywords.py  llm_enrich.py  models.py  paragraphs.py  pipeline.py  relations.py  repository.py  triage.py
src/paperrag/observability/: __init__.py  store.py  viewer.py
src/paperrag/review/: __init__.py  api.py  (+4 more)
tests/: conftest.py  pdf_fixtures.py  test_auth.py  test_collect_cli.py  test_concurrency.py  test_config.py  test_docling_mapping.py  test_embed_server.py  test_eval_metrics.py  test_excel.py  test_filterer.py  test_keywords.py  test_llm_enrich.py  test_migration_sql.py  test_paddle_mapping.py  test_paper_collection.py  test_paper_smoke_set.py  test_paragraphs.py  test_pipeline.py  test_prepare_training_data.py  test_readiness.py  test_relations.py  test_review_api.py  test_review_service.py  test_search_api.py  test_search_repository.py  test_search_service.py  test_ui_app.py  test_ui_client.py
tests/integration/: conftest.py  test_docling_backend.py  test_e2e_scenario.py  test_evaluate_ocr_quality.py  test_llm_observability.py  test_review_store.py
(+17 files in other folders)
