[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperrag"
version = "0.1.0"
description = "On-premises paper analysis RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "pgvector",
    "httpx",
    "openpyxl",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
ingest = [
    "pymupdf",
]
ingest-full = [
    "pymupdf",
    "docling",
    "paddlepaddle==3.3.0",
    "paddleocr[doc-parser]==3.7.0",
    "kiwipiepy",
]
embed = [
    "sentence-transformers",
]
worker = [
    "celery[redis]",
]
ui = [
    "streamlit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperrag"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
