[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperrag"
version = "0.1.0"
description = "On-premises paper analysis RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "psycopg[binary]",
    "pgvector",
    "httpx",
    "openpyxl",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "reportlab",
]
ingest = [
    "pypdfium2",
    "pypdf",
    "pdfplumber",
    "pillow",
]
ocr = [
    "pypdfium2",
    "pypdf",
    "pdfplumber",
    "pillow",
    "paddlepaddle==3.3.0",
    "paddleocr[doc-parser]==3.7.0",
    "kiwipiepy",
]
ingest-full = [
    "pypdfium2",
    "pypdf",
    "pdfplumber",
    "pillow",
    "docling",
    "paddlepaddle==3.3.0",
    "paddleocr[doc-parser]==3.7.0",
    "kiwipiepy",
]
embed = [
    "sentence-transformers",
]
worker = [
    "celery[redis]",
]
ui = [
    "streamlit",
]
eval = [
    "jiwer",   # CER/WER 계산 표준 라이브러리(MIT)
    "apted",   # 트리 편집거리(MIT) — TEDS 알고리즘의 핵심 연산
]

[tool.hatch.build.targets.wheel]
packages = ["src/paperrag"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
